--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -6,25 +6,24 @@
   </div>
 <%- end -%>
 
-<div id="findFlightsSec">
-  <ul id="flightNav">
-    <li><a href="#">One Way</a></li>
-    <li><a href="#" class="current">Return</a></li>
-    <li><a href="#">Multi-City</a></li>
-  </ul>
-  <div id="toFrom">
-    <div class="floatLeft">
-      <div class="lbl floatLeft">
-        <h2>From</h2>
-        <%= link_to session[:origin], (search_flight_index_path(:q => "from")), :id => "#{((session[:origin].blank?)? "origin_airport" : "session_origin"  )}", :class => "fromLink" %>
-      </div>
-      <div class="lbl floatRight">
-        <h2>To</h2>
-        <%= link_to session[:dest], (search_flight_index_path(:q => "to")), :id => "#{((session[:dest].blank?)? "dest_airport" : "session_dest"  )}", :class => "toLink" %>
+  <div id="drWrap">
+    <ul id="flightNav">
+      <li><a href="#">One Way</a></li>
+      <li><a href="#" class="current">Return</a></li>
+      <li><a href="#">Multi-City</a></li>
+    </ul>
+    <div id="toFrom">
+      <div class="floatLeft width99">
+        <div class="lbl floatLeft">
+          <h4>From</h4>
+          <%= link_to session[:origin], (search_flight_index_path(:q => "from")), :id => "#{((session[:origin].blank?)? "origin_airport" : "session_origin"  )}", :class => "fromLink" %>
+        </div>
+        <div class="lbl floatRight">
+          <h4>To</h4>
+          <%= link_to session[:dest], (search_flight_index_path(:q => "to")), :id => "#{((session[:dest].blank?)? "dest_airport" : "session_dest"  )}", :class => "toLink" %>
+        </div>
       </div>
     </div>
-  </div>
-  <div id="drWrap">
     <a href="/flight/calendar">
       <ul id="dr" class="reset">
         <li>
@@ -43,18 +42,20 @@
         </li>
       </ul>
     </a>
+    <div class="floatLeft">
+      <%= form_tag(flight_index_path, :method => :post) do %>
+        Adults: <%= select_tag "adults", options_for_select(%w(1 2 3 4 5 6 7 8 9 10), session[:adults]) %>
+        Children: <%= select_tag "child", options_for_select(%w(0 1 2 3 4 5 6 7 8 9 10), session[:child]) %>
+        Infants: <%= select_tag "infants", options_for_select(%w(0 1 2 3 4 5 6 7 8 9 10), session[:infants]) %>
+        <div id="searchFLight" class="floatLeft width99">
+          <h4>Search by</h4>
+          <ul class="submitList">
+            <li class="halfw"><%= submit_tag "Find Exact Date Flights", :id => "lowestFares" %></li>
+            <li class="halfw"><%= submit_tag "Find Flexible Date Flights", :id => "exactDates" %></li>
+          </ul>
+        </div>
+      <%- end -%>
+    </div>
+    <ul id="search_#{params[:q]}_list"></ul>
   </div>
-  <div class="float">
-     <%= form_tag(flight_index_path, :method => :post) do %>
-      Adults: <%= select_tag "adults", options_for_select(%w(1 2 3 4 5 6 7 8 9 10), session[:adults]) %>
-      Children: <%= select_tag "child", options_for_select(%w(0 1 2 3 4 5 6 7 8 9 10), session[:child]) %>
-      Infants: <%= select_tag "infants", options_for_select(%w(0 1 2 3 4 5 6 7 8 9 10), session[:infants]) %>
-      <div id="searchFLight" class="floatLeft">
-        <h4>Search by</h4>
-        <%= submit_tag "Find Exact Date Flights", :id => "lowestFares" %>
-        <%= submit_tag "Find Flexible Date Flights", :id => "exactDates" %>
-      </div>
-    <%- end -%>
-  </div>
-  <ul id="search_#{params[:q]}_list"></ul>
-</div>
+
