--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -9,8 +9,8 @@
   <div id="flight">
   <div class="left contentWrap">
     <ul id="flightNav">
-      <li><a href="#">One Way</a></li>
-      <li><a href="#" class="current">Return</a></li>
+      <li><a href="#" class="gap3">One Way</a></li>
+      <li><a href="#" class="gap3 current">Return</a></li>
       <li><a href="#">Multi-City</a></li>
     </ul>
     <div id="toFrom" class="left">
