--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -281,6 +281,11 @@ only screen and (min-device-pixel-ratio: 1.5) {
   color:black;
   text-decoration:none;
 }
+#searchFieldGroup {
+  padding-top:6px;
+  display:block;
+  margin-left:5px;
+}
 .lightGrayBg { background-color:#e9e9e9; }
 .grayBg {background-color:#9E9E9E;}
 .borderBottom { border-bottom:solid 1px #c4c4c4; }
@@ -399,7 +404,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
   border-bottom:solid 1px #5f5e5e;
 }
 
-    }/*   end of media query */
+} /*   end of media query */
 
 
 h2#findFlights {
