--- a/app/views/flight/search.html.erb
+++ b/app/views/flight/search.html.erb
@@ -19,7 +19,7 @@
   </div>
 </div> -->
 
-<div class="contentWrap left">
+<div id="searchPage" class="contentWrap left">
   <%- if session[:origin].blank? %>
     <div id="airportLst" class="grayBg searchResults">Airports nearest to your current location</div>
     <ul id="searchResultUl"></ul>
