--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -11,7 +11,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
 
 }
 
-@media only screen and (max-width: 480px) {
+/*@media only screen and (max-width: 480px) {*/
   header {
     background: transparent url("headBG.jpg") repeat-x;
     height:56px;
@@ -286,6 +286,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
   display:block;
   margin-left:5px;
 }
+ul.ui-autocomplete {top:118px;}
 ul.ui-autocomplete li {
   font-weight:bold;
   background-color:#e9e9e9;
@@ -313,14 +314,7 @@ ul.ui-autocomplete li {
   border-bottom: solid 1px #C4C4C4;
   width: 90% !important;
 }
-.ui-state-hover {
-  background:none !important;
-  font-size: 14px !important;
-  font-weight: bold !important;
-  border:none !important;
-  width: 90% !important;
-  margin:0 !important;
-}
+
 */
 #searchesHeader {
   background-color: #E7E7E7;
@@ -409,7 +403,26 @@ ul.ui-autocomplete li {
   border-bottom:solid 1px #5f5e5e;
 }
 
-} /*   end of media query */
+#searchPages {
+  min-height:251px;
+}
+
+.ui-autocomplete .ui-menu-item {
+  margin-bottom: 2px;
+  padding: 11px 18px;
+  font-size: 14px;
+  line-height: 0;
+  width: 100%;
+}
+.ui-state-hover {
+  background:none !important;
+  font-size: 14px !important;
+  font-weight: bold !important;
+  border:none !important;
+  width: 90% !important;
+  margin:0 !important;
+}
+/*   end of media query */
 
 
 h2#findFlights {
@@ -642,7 +655,7 @@ a#calLink {
 #searchWrap {min-height:220px;}
 
 #introWrap {
-  min-height:80px;
+  min-height:121px;
 }
 #intro {
   width:100px;
