--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -130,7 +130,7 @@
                 <%- adate = parseDate(flight[:adt]) -%>
           
                 <li class="left borderBottomGray <%= 'topradius' if (i==1) %>">
-                  <span class="resultTitle floatLeft"><%= "#{flight[:da]} #{flight[:aa]}" %></span>
+                  <span class="resultTitle floatLeft"><%= "#{flight[:da]}-#{flight[:aa]}" %></span>
                   <div class="searchDates floatRight">
                     <div class="floatleft days"><%= ddate.strftime('%a').upcase %><br/><%= ddate.strftime('%b').upcase %></div>
                     <div class="floatRight date"><%= ddate.strftime('%d') %></div>
@@ -144,8 +144,8 @@
                 <%- i += 1 -%>
                 <%- ddate = parseDate(rflight[:ddt]) -%>
                 <%- adate = parseDate(rflight[:adt]) -%>
-                <li class="left <%= 'bottomradius' if (i==session[:return_flights].size) %> returnGray">
-                  <span class="return resultTitle floatLeft"><%= "#{rflight[:da]} #{rflight[:aa]}" %></span>
+                <li class="left <%= 'bottomradius' if (i==session[:return_flights].size) %> returnGray <%= 'topradius' if (session[:flight].blank? && i.eql?(1))%>">
+                  <span class="return resultTitle floatLeft"><%= "#{rflight[:da]}-#{rflight[:aa]}" %></span>
                   <div class="searchDates floatRight">
                     <div class="floatleft days"><%= adate.strftime('%a').upcase %><br/><%= ddate.strftime('%b').upcase %></div>
                     <div class="floatRight date"><%= ddate.strftime('%d') %></div>
