--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -299,11 +299,17 @@ only screen and (min-device-pixel-ratio: 1.5) {
   display:block;
   margin-left:5px;
 }
-ul.ui-autocomplete {top:118px;}
+ul.ui-autocomplete {
+  top:118px;
+  width: 96%;
+  margin: 0px 0px 0px -18px;
+  overflow: hidden;
+}
 ul.ui-autocomplete li {
   font-weight:bold;
   background-color:#e9e9e9;
   border-bottom:solid 1px #c4c4c4;
+  width: 90;
 }
 .lightGrayBg { background-color:#e9e9e9; }
 .grayBg {background-color:#9E9E9E;}
@@ -312,23 +318,7 @@ ul.ui-autocomplete li {
 .bold {font-weight:bold;}
 .right {float:right;}
 .width70 {width:70%;}
-/*
-.ui-autocomplete {
-  top: 50px !important;
-  border: none !important;
-  width: 100% !important;
-}
-.ui-autocomplete li {
-  background-color: #E9E9E9;
-  margin-bottom: 2px !important;
-  font-size: 14px;
-  padding: 10px 15px !important;
-  font-weight: bold;
-  border-bottom: solid 1px #C4C4C4;
-  width: 90% !important;
-}
 
-*/
 #searchesHeader {
   background-color: #E7E7E7;
   float: left;
@@ -727,7 +717,7 @@ a#calLink {
       z-index: 9;
       margin: 0px 20px -5px -30px;
       display: inline-block;
-      width: 18px;
+      width: 19px;
       height: 20px;
       cursor: pointer;
     }
