--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -47,7 +47,7 @@
       <a href="/flight/calendar" id="calLink">
         <ul id="dr" class="reset">
           <li>
-            <div class="schedtaps left" id="dd">
+            <div class="schedtaps left" id="ffdd">
               <h4>Depart</h4>
               <div id="departDetails" class="left fullwidth">
                 <%- if session[:depart] 
@@ -62,7 +62,7 @@
             </div>
           </li>
           <li>
-            <div class="schedtaps left" id="rd">
+            <div class="schedtaps left" id="ffrd">
               <h4>Return</h4>
               <div id="returnDetails" class="left fullwidth">
                 <%- if session[:return] 
