--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <meta name="author" content="">
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height">
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta http-equiv="cleartype" content="on">
   <%= stylesheet_link_tag "style" %>
