--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -130,7 +130,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
     position:absolute;
     z-index:20;
     top:5px;
-    /*right:5px;*/
+    right: 0px;
     line-height: 0;
     text-indent: -9999px;
   }
