--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,7 @@
   
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <%= javascript_include_tag "application"%>
+    <%= javascript_include_tag "jquery.iphonepicker"%>
     <%- if session[:origin].blank? %>
     <script>
       $(document).ready(function() {
