--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -104,8 +104,8 @@
       <div id="searchFLight" class="floatLeft width99">
         <h4>Search by</h4>
         <ul class="submitList">
-          <li class="halfw"><%= submit_tag "Find Flexible Date Flights", :id => "lowestFares" %></li>
-          <li class="halfw"><%= submit_tag "Find Exact Date Flights", :id => "exactDates" %></li>
+          <li class="halfw"><%= submit_tag "Find Flexible Date Flights", :id => "lowestFares"%></li>
+          <li class="halfw" style="text-align:right"><%= submit_tag "Find Exact Date Flights", :id => "exactDates"%></li>
         </ul>
       </div>
     <%- end -%>
