--- a/app/views/flight/index.html.erb
+++ b/app/views/flight/index.html.erb
@@ -2,7 +2,7 @@
   <div>
     <div id="back"><a href="/" id="backBtn">Back</a></div>
     <div id="midHeader"><h2 id="findFlights">Find Flights</h2></div>
-    <div id="crumb"><h3>1 of 6</h3></div>
+    <div id="bcrumb"><h3>1 of 6</h3></div>
   </div>
 <%- end -%>
   <div class="left contentWrap">
